# back_users

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: linter.yaml  test.yaml
alembic/: env.py
alembic/versions/: 9ef770eeded8_first_revision.py  b2948e26a647_add_admin_table.py  bd697b19b113_first_revision.py  c4062d14de84_add_firebase_id.py
app/: main.py
app/adapters/database/: database.py
app/adapters/database/admins/: model.py  sql_admin_repository.py  unit_of_work.py
app/adapters/database/users/: model.py  sql_user_repository.py
app/adapters/http/: __init__.py
app/adapters/http/admin/: admin_controller.py  exceptions_handler.py
app/adapters/http/events/: events_controller.py
app/adapters/http/health/: health_controller.py
app/adapters/http/users/: exceptions_handler.py  users_controller.py
app/adapters/rest/: queue_metrics_client.py
app/adapters/rest/dtos/: metric.py
app/adapters/services/: firebase.py
app/conf/: config.py  logging.conf
app/datadog/: datadog_metrics.py
app/dependencies/: dependencies.py
app/domain/admins/command/: admin_create_command.py  admin_update_command.py
app/domain/admins/model/: admin.py  admin_exceptions.py  admin_id.py
app/domain/admins/query/: admin_query.py
app/domain/admins/repository/: admin_repository.py  unit_of_work.py
docker/: entrypoint.sh
docker/datadog-config/: datadog.yaml
tests/: test_app.py
tests/adapters/http/: bootstrap_app.py
tests/adapters/rest/: test_queue_metrics_client.py
tests/conf/: config.py
(+20 files in other folders)
