[tool.poetry]
name = "back-users"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.75.1"
pydantic = "1.9.0"
pytest = "7.1.1"
uvicorn = "0.17.6"

[tool.pytest.ini_options]
pythonpath = [
  "app"
]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
